# Cellular-Automata-Python

./: .gitignore  README.md  cellularautomata.py  forest-fire.py  game-of-life.py  pyproject.toml  test-prog.py
